# sillyclient

./: Cargo.toml
src/: cli.yml  main.rs
